# sec

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: build.yml  cargo_audit.yml  security_audit.yml
src/: cli.rs  fs.rs  gpg.rs  handle.rs  input.rs  main.rs  output.rs  secrets.rs  store.rs
tests/resources/: ownertrust-gpg.txt  public.key  secret.key
