[package]
name = "sec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
arboard = "2.1.0"
clap = { version = "3.1.17", features = [ "derive" ] }
gpgme = "0.10.0"
nix = "0.24.1"

[dev-dependencies]
memfile = "0.2.1"
tempfile = "3.3.0"
