[package]
name = "sec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.17", features = [ "derive" ] }
gpgme = "0.10.0"
rpassword = "6.0.1"
thiserror = "1.0.31"
zeroize = { version = "1.5.5", features = [ "zeroize_derive" ] }

[dev-dependencies]
memfile = "0.2.1"
tempfile = "3.3.0"

[profile.release]
strip = true
